--- a/app/views/pages/application.ejs
+++ b/app/views/pages/application.ejs
@@ -20,6 +20,11 @@
                 .then(response => console.log(response))
                 .catch(err => console.log(err));
         }
+
+        function deleteRow(row){
+         var d = row.parentNode.parentNode.rowIndex;
+        document.getElementById('dsTable').deleteRow(d);
+         }
     </script>
 </head>
 
@@ -32,7 +37,7 @@
     <div class="card-body">
         <% if(data.length){ %>
            
-        <table class="table">
+        <table id="dsTable" class="table">
             <thead>
                 <tr>
                     <th scope="col">#</th>
@@ -62,7 +67,7 @@
                   
                     <td>
                         <a href="/editpagecontrol/<%= data[i].generalID %>/<%= data[i].applicationID %>" class="btn btn-success edit">Edit</a>
-                        <a onclick="DeleteData('<%= data[i].generalID %>')" class="btn btn-danger delete">Delete</a>
+                        <button id ="deleteDep" value="Delete" onclick = "deleteRow(this)" class="btn btn-danger delete deleteBtn">Delete</button>
                     </td>
                 </tr>
                   
