--- a/app/views/pages/create-manpower.ejs
+++ b/app/views/pages/create-manpower.ejs
@@ -62,6 +62,7 @@
             console.log(statusval)
             const remarkval = document.getElementById("remark").value;
             console.log(remarkval)
+            
             let response = await fetch('http://localhost:8080/api/manpower/', {
                 method: 'POST',
                 headers: {
@@ -95,7 +96,7 @@
 
                 })
             })
-            .then(response => (response.JSON()))
+            .then(response => console.log(response.JSON()))
             .catch(err => console.log(err))
             // Swal.fire({
             //     icon: 'success',
